Rename to json-to-src.

--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "description": "A program to convert JSON file to PHP source code.",
     "keywords": ["json", "php", "converter", "source", "code", "tool", "utility"],
     "license": "MIT",
-    "name": "kshabazz/json-to-phpsrc",
+    "name": "kshabazz/json-to-src",
     "require": {
         "php": ">=7.0",
         "twig/twig": "^1.0",
@@ -30,8 +30,8 @@
         "phpunit/phpunit": "^5.0"
     },
     "support": {
-        "issues": "https://github.com/b01/json-to-phpsrc/issues",
-        "source": "https://github.com/b01/json-to-phpsrc"
+        "issues": "https://github.com/b01/json-to-src/issues",
+        "source": "https://github.com/b01/json-to-src"
     },
     "type": "application"
 }
