--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Jtp\\Tests\\": "tests/Jtp/"
+            "Jtp\\Tests\\": "test/Jtp/"
         }
     },
     "bin": ["bin/jsontosrc.php"],
